# proyecto-py

./: .gitignore  README.md  main.py  pyproject.toml
20-proyecto-python/: basedatos.sql
20-proyecto-python/notas/: acciones.py  nota.py
notas/: acciones.py  nota.py
usuarios/: acciones.py  conexion.py  initialize_db.py  usuario.py
